Footnote and Additional Text

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <h3 class="landingpage"><a href="about.html">About</a></h3>
   <h3 class="landingpage"><a href="our-team.html">Team</a>
   <h3 class="landingpage"><a href="upcoming-projects.html">Upcoming Projects</a></h3>
+  <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
 </html>
