--- a/our-team.html
+++ b/our-team.html
@@ -22,14 +22,14 @@
     </li>
   </ul>
   <h2>Board</h2>
+  <p>everybody else i dont have time for this rn</p>
   <h2>Creative Team</h2>
   <ul>
     <li>Jaden Patterson - DOP</li>
     <li>James Luke - VFX</li>
     <li>Brady Meyer - Visual Promo</li>
-    <li>Will Haddad</li>
-    <li>Liam Buckley</li>
-    <li>Mariya Garmenova</li>
+    <li>Will Haddad - Composer</li>
   </ul>
+  <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
 </html>
