--- a/upcoming-projects.html
+++ b/upcoming-projects.html
@@ -16,5 +16,6 @@
   <h1>Upcoming Projects</h1>
   <h2>Eye of the Forest</h2>
   <img src="Eye of the Forest.jpg" width="300" height="auto">
+  <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
 </html>
