--- a/about.html
+++ b/about.html
@@ -11,5 +11,6 @@
   <h1 style="text-align: center;">About Us</h1>
   <p style="text-align: center;">Magic Number Studios is a production company headed by Kaleb Cook.</p>
   <p style="text-align: center;">We are a passionate group of young creatives from across the United States and Canada</p>
+  <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
 </html>
