Beige Design Update

--- a/our-team.html
+++ b/our-team.html
@@ -8,7 +8,9 @@
   <title>Our Team</title>
 </head>
 <body>
-  <h1>Our Team</h1>
+  <header>
+    <h1>Our Team</h1>
+  </header>
   <h2>Kaleb Cook 
     <br>CEO
   </h2>
