--- a/upcoming-projects.html
+++ b/upcoming-projects.html
@@ -13,9 +13,17 @@
   <title></title>
 </head>
 <body>
-  <h1>Upcoming Projects</h1>
-  <h2>Eye of the Forest</h2>
-  <img src="Eye of the Forest.jpg" width="300" height="auto">
+  <header>
+    <h1>Upcoming Projects</h1>
+  </header>
+  <div class="project">
+    <h2>Eye of the Forest</h2>
+    <img src="Eye of the Forest.jpg" width="300" height="auto">
+  </div>
+  <div class="project">
+    <h2>The Last of Us</h2>
+    <p>Image to go here</p>
+  </div>
   <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
 </html>
