--- a/about.html
+++ b/about.html
@@ -8,9 +8,13 @@
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-  <h1 style="text-align: center;">About Us</h1>
-  <p style="text-align: center;">Magic Number Studios is a production company headed by Kaleb Cook.</p>
-  <p style="text-align: center;">We are a passionate group of young creatives from across the United States and Canada</p>
+  <header>
+    <h1>About Us</h1>
+  </header>
+  <div>
+    <p style="text-align:center">Magic Number Studios is a production company headed by Kaleb Cook.</p>
+    <p style="text-align:center">We are a passionate group of young creatives from across the United States and Canada</p>
+  </div>
   <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
 </html>
