--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
   <title>Magic Number Studios</title>
 </head>
 <body>
-  <h1 style="text-align: center;">Magic Number Studios</h1>
-  <h2 style="text-align: center;">Unofficial Kaleb don't kill me</h2>
-  <h3 class="landingpage"><a href="about.html">About</a></h3>
-  <h3 class="landingpage"><a href="our-team.html">Team</a>
-  <h3 class="landingpage"><a href="upcoming-projects.html">Upcoming Projects</a></h3>
+  <main>
+    <header>
+      <div>
+        <h1>Magic Number Studios</h1>
+        <h2>Unofficial Kaleb don't kill me</h2>
+      </div>
+    </header>
+  </main>
+  <div class="links">
+    <h3><a href="about.html">About</a></h3>
+    <h3><a href="our-team.html">Team</a>
+    <h3><a href="upcoming-projects.html">Upcoming Projects</a></h3>
+  </div>
   <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
 </html>
