Added link, team, and flex design

--- a/our-team.html
+++ b/our-team.html
@@ -11,27 +11,25 @@
   <header>
     <h1>Our Team</h1>
   </header>
-  <h2>Kaleb Cook 
-    <br>CEO
-  </h2>
-  <h2>Executive Committee</h2>
-  <ul>
-    <li>Cole Northridge - COO</li>
-    <li>Zach Davis - CFO</li>
-    <li>Charlotte Green - CIO</li>
-    <li>Jacob Brady BTTCEO
-      <br>(Boyfriend of the CEO)
-    </li>
-  </ul>
-  <h2>Board</h2>
-  <p>everybody else i dont have time for this rn</p>
-  <h2>Creative Team</h2>
-  <ul>
-    <li>Jaden Patterson - DOP</li>
-    <li>James Luke - VFX</li>
-    <li>Brady Meyer - Visual Promo</li>
-    <li>Will Haddad - Composer</li>
-  </ul>
+  <div class="CEO">
+    <h4>[Image Here]</h4>
+    <h2>Kaleb Cook | CEO</h2>
+  </div>
+
+  <h3 style="text-align:center"><u>Members</u></h3>
+  <div class="members">
+    <h3 class="linkitem">Cole Northridge</h3>
+    <h3 class="linkitem">Zach Davis</h3>
+    <h3 class="linkitem">Liam Buckley</h3>
+    <h3 class="linkitem">Nick Downs</h3>
+    <h3 class="linkitem">Jacob Brady</h3>
+  </div>
+  <div class="members">
+    <h3 class="linkitem">Jaden Patterson</h3>
+    <h3 class="linkitem">Mariya Garmenova</h3>
+    <h3 class="linkitem">Braden Shepstad</h3>
+    <h3 class="linkitem">Charlotte Green</h3>
+  </div>
   <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
 </html>
