--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <header>
       <div>
         <h1>Magic Number Studios</h1>
-        <h2>Unofficial Kaleb don't kill me</h2>
+        <h2>The Unofficial Website</h2>
       </div>
     </header>
   </main>
   <div class="links">
-    <h3><a href="about.html">About</a></h3>
-    <h3><a href="our-team.html">Team</a>
-    <h3><a href="upcoming-projects.html">Upcoming Projects</a></h3>
+    <h3 class="linkitem"><a href="about.html">About</a></h3>
+    <h3 class="linkitem"><a href="our-team.html">Our Team</a></h3>
+    <h3 class="linkitem"><a href="upcoming-projects.html">Upcoming Projects</a></h3>
+    <h3 class="linkitem"><a href="contact.html">Contact</a></h3>
   </div>
   <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
