Organized Page System

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </header>
   </main>
   <div class="links">
-    <h3 class="linkitem"><a href="about.html">About</a></h3>
-    <h3 class="linkitem"><a href="our-team.html">Our Team</a></h3>
-    <h3 class="linkitem"><a href="upcoming-projects.html">Upcoming Projects</a></h3>
-    <h3 class="linkitem"><a href="contact.html">Contact</a></h3>
+    <h3 class="linkitem"><a href="/pages/about.html">About</a></h3>
+    <h3 class="linkitem"><a href="/pages/our-team.html">Our Team</a></h3>
+    <h3 class="linkitem"><a href="/pages/upcoming-projects.html">Upcoming Projects</a></h3>
+    <h3 class="linkitem"><a href="/pages/contact.html">Contact</a></h3>
   </div>
   <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
