--- a/pages/upcoming-projects.html
+++ b/pages/upcoming-projects.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="/stylesheet.css">
   <style>
     * {
       text-align: center;
@@ -18,7 +18,7 @@
   </header>
   <div class="project">
     <h2>Eye of the Forest</h2>
-    <img src="Eye of the Forest.jpg" width="300" height="auto">
+    <img src="/media/Eye of the Forest.jpg" width="300" height="auto">
   </div>
   <div class="project">
     <h2>The Last of Us</h2>
