Potential Changes to be Reverted

--- a/pages/about.html
+++ b/pages/about.html
@@ -15,6 +15,7 @@
     <p style="text-align:center">Magic Number Studios is a production company headed by Kaleb Cook.</p>
     <p style="text-align:center">We are a passionate group of young creatives from across the United States and Canada</p>
   </div>
+  <a href="/index.html"><button>Go back</button></a>
   <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
 </html>
