--- a/pages/our-team.html
+++ b/pages/our-team.html
@@ -30,6 +30,9 @@
     <h3 class="linkitem">Braden Shepstad</h3>
     <h3 class="linkitem">Charlotte Green</h3>
   </div>
+
+  <a href="/index.html"><button>Go back</button></a>
   <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
+  
 </body>
 </html>
