--- a/pages/upcoming-projects.html
+++ b/pages/upcoming-projects.html
@@ -5,11 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheet.css">
-  <style>
-    * {
-      text-align: center;
-    }
-  </style>
   <title></title>
 </head>
 <body>
@@ -17,13 +12,14 @@
     <h1>Upcoming Projects</h1>
   </header>
   <div class="project">
-    <h2>Eye of the Forest</h2>
     <img src="/media/Eye of the Forest.jpg" width="300" height="auto">
+    <h2>Eye of the Forest</h2>
   </div>
   <div class="project">
     <h2>The Last of Us</h2>
     <p>Image to go here</p>
   </div>
+  <a href="/index.html"><button>Go back</button></a>
   <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
 </body>
 </html>
