--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,10 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheet.css">
   <title>Contact Us</title>
 </head>
 <body>
-  <h1>Under Construction</h1>
-  <h2>check back soon</h2>
+  <header>
+    <h1>Contact Us</h1>
+    </header>
+  <div class="contactblurb">
+    <p>
+    </p>
+  </div>
+
+  <a href="/index.html"><button>Go back</button></a>
+  <footer>© 2022 Charlotte Green. All Rights Reserved</footer>
+  
 </body>
 </html>
